# tunix-hack

./: .env.example  .gitignore  CLAUDE.md  SETUP.md  TUNIX_NOTES.md  pyproject.toml
_docs/plans/: FULL-PLAN.md
_docs/plans/research/: README.md
notebooks/: 00_env_sanity.ipynb  00_sft_warmup.ipynb  01_grpo_local.ipynb
notebooks/inference/: base.ipynb  demo.ipynb
notebooks/reference/: grpo-demo-gemma3-1b.ipynb
src/tunix_hack/: __init__.py
src/tunix_hack/data/: __init__.py  loaders.py  preprocessing.py
src/tunix_hack/inference/: __init__.py  generation.py
src/tunix_hack/models/: __init__.py  checkpoints.py  loader.py
src/tunix_hack/rewards/: __init__.py  code_reward.py  creative_reward.py  math_reward.py  multi_domain.py
src/tunix_hack/training/: __init__.py  grpo.py  sft.py
src/tunix_hack/utils/: __init__.py  xml_parsing.py
